--- a/tests/pallas/BUILD
+++ b/tests/pallas/BUILD
@@ -242,3 +242,24 @@ jax_test(
         "//jax:pallas_tpu_ops",
     ],
 )
+
+jax_test(
+    name = "gmm_test",
+    size = "large",
+    srcs = [
+        "gmm_test.py",
+    ],
+    disable_backends = [
+        "cpu",
+        "gpu",
+    ],
+    shard_count = 50,
+    tags = [
+        "noasan",  # Times out.
+        "nomsan",  # Times out.
+        "notsan",  # Times out.
+    ],
+    deps = [
+        "//jax:pallas_tpu_ops",
+    ] + py_deps("absl/testing") + py_deps("absl/flags") + py_deps("numpy") + py_deps("hypothesis"),
+)
